--- a/index.html
+++ b/index.html
@@ -2,11 +2,8 @@
 layout: "default"
 ---
 <h1>Blog</h1>
-
-{% if site.posts -%}
-<ul>
-  {%- for post in site.posts -%}
-  <li><a href="{{ post.url }}">{{ post.title }}</a></li>
-  {%- endfor -%}
-</ul>
-{%- endif -%}
+{% if site.posts %}
+    <ul>{% for post in site.posts %}
+      <li><a href="{{ post.url }}">{{ post.title }}</a></li>
+    {%- endfor -%}
+</ul>{% endif -%}
